fix(frontend): Change modal-container z-index

--- a/frontend/src/scss/global.scss
+++ b/frontend/src/scss/global.scss
@@ -92,3 +92,7 @@ h4,
 h5 {
     font-weight: 400;
 }
+
+.modal-container {
+    z-index: 3000;
+}
